Fixed bug with two scrollbars when mobile nav is open.

--- a/less/style/blocks/site.less
+++ b/less/style/blocks/site.less
@@ -5,6 +5,14 @@
 
 .site {
   overflow-x: hidden;
+
+  &.is-mobile-nav-open {
+    overflow-y: hidden;
+
+    .respond(large, {
+      overflow-y: inherit;
+    });
+  }
 }
 
 .site__page {
